--- a/back/package.json
+++ b/back/package.json
@@ -1,11 +1,11 @@
 {
   "name": "shopify-store",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "start":" nodemon server.js "
+  
+    "start":" node server.js "
   },
   "keywords": [],
   "author": "",
